--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Hey ! I am Deep Kiran.</h1>
+    <span>About Me :</span>
+    <ul>
+        <li>I am 23 years old and a CS graduate from SRMIST,Chennai.</li>
+        <li>I am currently working as a Systems Engineer in Infosys Ltd,Hyderabad.</li>
+        <li>I am looking out for Full Stack Developer roles ! So reach out to me if you have any open positions in your org.</li>
+    </ul>    
 </body>
 </html>
