Update-added project details

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <li>I am 23 years old and a CS graduate from SRMIST,Chennai.</li>
         <li>I am currently working as a Systems Engineer in Infosys Ltd,Hyderabad.</li>
         <li>I am looking out for Full Stack Developer roles ! So reach out to me if you have any open positions in your org.</li>
-    </ul>    
+    </ul>  
+    
+    <hr/>
+
+    <span>My Projects:</span>
+    <p>I have worked on few CLI apps and web apps as well . </p>
 </body>
 </html>
