--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
         </ul>    
     </nav>
+    <header class="heading">
+        <img src="images/web_developer_icon.svg" class="headericon"/>
+        
+    </header>    
 
     
     <h1>Hey ! I am Deep Kiran.</h1>
