--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <!---- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
    -->
     <link href="styles.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
     </style>
