Edited some styling

--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
             <li class="nav-pills">
                 <a href="/">BLOGS</a>
             </li>
+            <li class="nav-pills">
+                <a href="/">ABOUT</a>
+            </li>
 
         </ul>    
     </nav>
     <header class="heading">
         <img src="images/web_developer_icon.svg" class="headericon"/>
+        <h2>Hey ! I am Deep Kiran.</h2>
+        <span><strong>"Life is a journey , not a destination . Its more fun when you embrace it."</strong></span>
         
     </header>    
 
