New Section Added
Added a skills section to the website.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         <span><strong>"Life is a journey , not a destination . Its more fun when you embrace it."</strong></span>
         
     </header>    
-
+    <section class="skills">
+        <h1>Technologies | Skills</h1>
+        <p>I am familiar with HTML5, CSS3, Javascript, ReactJS, ExpressJS, NodeJS, MySQL, MongoDB, Git and Web Hosting.</p>
+    </section>
     
     <h1>Hey ! I am Deep Kiran.</h1>
     <span>About Me :</span>
