Projects Overview section added

--- a/index.html
+++ b/index.html
@@ -38,14 +38,24 @@
     <header class="heading">
         <img src="images/web_developer_icon.svg" class="headericon"/>
         <h2>Hey ! I am Deep Kiran.</h2>
-        <span><strong>"Life is a journey , not a destination . Its more fun when you embrace it."</strong></span>
+        <span>"Life is a journey , not a destination . Its more fun when you embrace it."</span>
         
     </header>    
     <section class="skills">
-        <h1>Technologies | Skills</h1>
+        <h1>Technologies | Skillset</h1>
         <p>I am familiar with HTML5, CSS3, Javascript, ReactJS, ExpressJS, NodeJS, MySQL, MongoDB, Git and Web Hosting.</p>
     </section>
     
+    <section class="projects">
+        <h1>Projects</h1>
+        <div class="overview">
+            <img src="images/skills.svg" />
+            <p>I have developed few CLI apps and some web apps as well . I like to showcase my work and hence you can find all my projects hosted online.</p>
+            <div class="link">
+                <a href="/">View Projects</a>
+            </div>    
+        </div>
+    </section>
     <h1>Hey ! I am Deep Kiran.</h1>
     <span>About Me :</span>
     <ul>
