Added links to Footer

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <h3>Let's connect on Social Media platforms</h3>
         <hr class="line"/>
         <ul class="nav-list socialicons">
-            <li class="nav-pills" ><a href="/" style="color: #0e76a8;">LinkedIn</a></li>
-            <li class="nav-pills" ><a href="/" style="color: black;">Github</a></li>
-            <li class="nav-pills" ><a href="/" style="color: #1DA1F2;">Twitter</a></li>
+            <li class="nav-pills" ><a href="https://www.linkedin.com/in/deep-kiran-579899107/" style="color: #0e76a8;">LinkedIn</a></li>
+            <li class="nav-pills" ><a href="https://github.com/DEEPKIRANC" style="color: black;">Github</a></li>
+            <li class="nav-pills" ><a href="https://twitter.com/DeepKir96010262" style="color: #1DA1F2;">Twitter</a></li>
         </ul>
     </footer>    
     <!--<h1>Hey ! I am Deep Kiran.</h1>
