Add new html files and styling

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <ul class="nav-list">
 
             <li class="nav-pills">
-                <a href="/">HOME</a>
+                <a class="activelink" href="index.html">HOME</a>
             </li>
             <li class="nav-pills">
-                <a href="/">PROJECTS</a>
+                <a href="projects.html">PROJECTS</a>
             </li>
             <li class="nav-pills">
-                <a href="/">BLOGS</a>
+                <a href="/blogs.html">BLOGS</a>
             </li>
             <li class="nav-pills">
                 <a href="/">ABOUT</a>
@@ -52,7 +52,7 @@
             <img src="images/skills.svg" />
             <p>I have developed few CLI apps and some web apps as well . I like to showcase my work and hence you can find all my projects hosted online.</p>
             <div class="link">
-                <a href="/">View Projects</a>
+                <a href="projects.html">View Projects</a>
             </div>    
         </div>
     </section>
@@ -61,7 +61,7 @@
         <h1>Blogs</h1>
         <p>Finally I have started my blogging journey. Feel free to explore these technical blogs on my learning journey.</p>
         <div class="link blog">
-            <a href="/" >View Blogs</a>
+            <a href="blogs.html" >View Blogs</a>
         </div> 
     </section>  
     
