styles-Add project cards in projects tab

--- a/projects.html
+++ b/projects.html
@@ -33,5 +33,50 @@
 
         </ul>    
     </nav>
+     
+    <h3 style="text-align: center;">Personal Projects And Neogcamp Journey</h3>
+    <hr class="line"/>
+
+    <div class="projectsection">
+        <div class="project-card">
+            <img src="images/socialmedia_microservices.PNG" alt="no image"/>
+            <h4>Social Media Aggregator</h4>
+        </div>
+        <div class="project-card">
+            <img src="images/food_recommendation_csb.PNG" alt="no image"/>
+            <h4>Food Recommendation App</h4>
+        </div>
+        <div class="project-card">
+            <img src="images/symbol_interpreter_csb.PNG" alt="no image"/>
+            <h4>Symbol Interpreter App</h4>
+        </div>
+        <div class="project-card">
+            <img src="images/piratespeak_netlify.PNG" alt="no image"/>
+            <h4>Pirate Speaks Translation</h4>
+        </div>
+        <div class="project-card">
+            <img src="images/bananaspeaks_netlify.PNG" alt="no image"/>
+            <h4>Minions Language Translation</h4>
+        </div>
+        <div class="project-card">
+            <img src="images/GOT_QuizRepl.PNG" alt="no image"/>
+            <h4>Game Of Thrones Trivia</h4>
+        </div>
+        <div class="project-card">
+            <img src="images/DoYouKnowMe_QuizRepl.PNG" alt="no image"/>
+            <h4>Do You Know Me Quiz</h4>
+        </div>
+    </div>    
+
+
+    <footer class="footer">
+        <h3>Let's connect on Social Media platforms</h3>
+        <hr class="line"/>
+        <ul class="nav-list socialicons">
+            <li class="nav-pills" ><a href="https://www.linkedin.com/in/deep-kiran-579899107/" style="color: #0e76a8;">LinkedIn</a></li>
+            <li class="nav-pills" ><a href="https://github.com/DEEPKIRANC" style="color: black;">Github</a></li>
+            <li class="nav-pills" ><a href="https://twitter.com/DeepKir96010262" style="color: #1DA1F2;">Twitter</a></li>
+        </ul>
+    </footer> 
 </body>
 </html>
