Add some styles to nav header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Portfolio|Deepkiran</title>
 </head>
 <body>
-    <nav class="navbar container">
+    <nav id="headernav" class="navbar container">
        
         <h3>CHANTATI DEEPKIRAN</h3>
         
@@ -97,4 +97,5 @@
     </ul>
 -->    
 </body>
+ 
 </html>
