--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
         </ul>    
     </nav>
      
-    <h3 style="text-align: center;">Personal Projects And Neogcamp Journey</h3>
+    <h3 style="text-align: center;padding-top: 10rem;">Personal Projects And Neogcamp Journey</h3>
     <hr class="line"/>
 
     <div class="projectsection">
