--- a/projects.html
+++ b/projects.html
@@ -174,6 +174,8 @@
             <li class="nav-pills" ><a href="https://www.linkedin.com/in/deep-kiran-579899107/" style="color: #0e76a8;">LinkedIn</a></li>
             <li class="nav-pills" ><a href="https://github.com/DEEPKIRANC" style="color: black;">Github</a></li>
             <li class="nav-pills" ><a href="https://twitter.com/DeepKir96010262" style="color: #1DA1F2;">Twitter</a></li>
+            <li class="nav-pills" ><a href="https://deepkiran.hashnode.dev/" style="color: #333;">Hashnode</a></li>
+       
         </ul>
     </footer> 
 </body>
