--- a/projects.html
+++ b/projects.html
@@ -157,7 +157,7 @@
 
 
     <footer class="footer">
-        <h3>Let's connect on Social Media platforms</h3>
+        <h3>Reach Out To Me At</h3>
         <hr class="line"/>
         <ul class="nav-list socialicons">
             <li class="nav-pills" ><a href="https://www.linkedin.com/in/deep-kiran-579899107/" style="color: #0e76a8;">LinkedIn</a></li>
