--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="images/background.gif" class="headericon"/>
         <div class="about__me">
         <p>"Life is a journey , not a destination"</p>
-        <div class="sometext"><p>I'm a passionate Frontend Engineer from India . I love building web apps, debugging errors and helping fellow coders. </div>
+        <div class="sometext"><p>I'm a passionate Frontend Engineer from India . I love building web apps, debugging errors and helping fellow coders. Currently looking for Frontend Engineering opportunities. </div>
         </p>
         <button class="resume__download">Download Resume</button>
         </div>
