--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>"Life is a journey , not a destination"</p>
         <div class="sometext"><p>I'm a passionate Frontend Engineer from India . I love building web apps, debugging errors and helping fellow coders. Currently looking for Frontend Engineering opportunities. </div>
         </p>
-        <button class="resume__download">Download Resume</button>
+        <div class="resume__download"><a style="text-decoration: none;" target="_blank" href="https://bit.ly/3u8QXPd" download>View Resume</a></div>
         </div>
     </header>  
      <section class="generic">
